@@ -153,16 +153,16 @@ public class ElementGraph extends SimpleDirectedGraph<FlowElement, Scope>
         throw new ElementGraphException( flowElement, "unable to traverse to the next element after " + flowElement );
         }
 
-      if( incomingEdgesOf( flowElement ).size() != 0 )
-        break;
+      if( incomingEdgesOf( flowElement ).size() != 0 && outgoingEdgesOf( flowElement ).size() != 0 )
+        continue;
 
       if( flowElement instanceof Extent )
         continue;
 
       if( flowElement instanceof Pipe )
-        throw new ElementGraphException( flowElement, "no Tap instance given to connect Pipe " + flowElement );
+        throw new ElementGraphException( (Pipe) flowElement, "no Tap connected to Pipe, possible ambiguous branching, try explicitly naming tails" );
       else if( flowElement instanceof Tap )
-        throw new ElementGraphException( flowElement, "no Pipe instance given to connect Tap " + flowElement );
+        throw new ElementGraphException( (Tap) flowElement, "no Pipe connected to Tap" );
       else
         throw new ElementGraphException( flowElement, "unknown element type: " + flowElement );
       }
@@ -437,23 +437,24 @@ public class ElementGraph extends SimpleDirectedGraph<FlowElement, Scope>
       Writer writer = new FileWriter( filename );
 
       Util.writeDOT( writer, graph, new IntegerNameProvider<FlowElement>(), new VertexNameProvider<FlowElement>()
-      {
-      public String getVertexName( FlowElement object )
         {
-        if( object instanceof Tap || object instanceof Extent )
-          return object.toString().replaceAll( "\"", "\'" );
+        public String getVertexName( FlowElement object )
+          {
+          if( object instanceof Tap || object instanceof Extent )
+            return object.toString().replaceAll( "\"", "\'" );
 
-        Scope scope = graph.outgoingEdgesOf( object ).iterator().next();
+          Scope scope = graph.outgoingEdgesOf( object ).iterator().next();
 
-        return ( (Pipe) object ).print( scope ).replaceAll( "\"", "\'" );
-        }
-      }, new EdgeNameProvider<Scope>()
+          return ( (Pipe) object ).print( scope ).replaceAll( "\"", "\'" );
+          }
+        }, new EdgeNameProvider<Scope>()
       {
       public String getEdgeName( Scope object )
         {
         return object.toString().replaceAll( "\"", "\'" ).replaceAll( "\n", "\\\\n" ); // fix for newlines in graphviz
         }
-      } );
+      }
+      );
 
       writer.close();
       }
