@@ -2,6 +2,8 @@ Cascading Change Log
 
 1.2.4 [unreleased]
 
+  Updated planner to issue an error message if a tail c.p.Pipe instance doesn't not properly bind to a c.t.Tap instance.
+
 1.2.3
 
   Added c.f.Flow#setMaxConcurrentSteps to set the maximum number of steps that can be submitted concurrently.
